# CodeGrok_mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.ps1  setup.sh
docs/: SECURITY_REVIEW.md
self_test/: README.md  demo_mcp.py
src/codegrok_mcp/: __init__.py
src/codegrok_mcp/core/: __init__.py  exceptions.py  interfaces.py  models.py
src/codegrok_mcp/indexing/: __init__.py  embedding_service.py  memory_retriever.py  parallel_indexer.py  source_retriever.py
src/codegrok_mcp/mcp/: __init__.py  server.py  state.py
src/codegrok_mcp/parsers/: __init__.py  language_configs.py  treesitter_parser.py
tests/: __init__.py  conftest.py
tests/fixtures/sample_projects/multi_lang/: app.js  server.go  types.ts
tests/fixtures/sample_projects/python_project/: main.py  utils.py
tests/integration/: test_source_retriever.py  test_tool_discovery.py
tests/mcp/: __init__.py  test_protocol_simulation.py  test_state_management.py  test_tools_direct.py
tests/unit/: test_embedding_service.py  test_extras.py  test_init.py  test_memory_retriever.py  test_models.py  test_parallel_indexer.py  test_parser.py
