[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegrok-mcp"
version = "0.2.0"
description = "MCP server for semantic code understanding and search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "rdondeti"}
]
keywords = ["mcp", "code-search", "semantic-search", "code-understanding", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.0",
    "chromadb>=1.3.0",
    "fastmcp>=2.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "einops>=0.7.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 300

[project.urls]
Homepage = "https://github.com/rdondeti/CodeGrok_mcp"
Repository = "https://github.com/rdondeti/CodeGrok_mcp"
Issues = "https://github.com/rdondeti/CodeGrok_mcp/issues"

[project.scripts]
codegrok-mcp = "codegrok_mcp.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codegrok_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
